got frontend to send file to backend over a fetch request. also made backend endpoint to accept and save

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,6 +12,8 @@
     /* Strictness */
     "strict": true,
     "noUncheckedIndexedAccess": true,
+    // allow implicit any
+    "noImplicitAny": false,
     "checkJs": true,
 
     /* Bundled projects */
