--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "ky": "^1.2.2",
+    "markdown-it": "^14.0.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
