--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,15 @@
     "build": "next build",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "dev": "next dev",
+    "dev": "concurrently \"yarn dev:ui\" \"yarn dev:backend\"",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "yarn dev",
+    "build-ui": "react-scripts build",
+    "test-ui": "react-scripts test",
+    "eject-ui": "react-scripts eject",
+    "dev:ui": "react-scripts start",
+    "dev:backend": "next dev"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -29,7 +34,25 @@
     "react-hook-form": "^7.51.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "nodemailer": "^6.7.5",
+    "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.8.2",
+    "react-mailchimp-subscribe": "^2.1.3",
+    "react-multi-carousel": "^2.8.1",
+    "react-on-screen": "^2.1.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
@@ -46,6 +69,24 @@
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "ct3aMetadata": {
     "initVersion": "7.28.0"
