--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,14 @@
     "build": "next build",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "dev": "concurrently \"yarn dev:ui\" \"yarn dev:backend\"",
+    "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "yarn dev",
+    "start": "next start",
     "build-ui": "react-scripts build",
     "test-ui": "react-scripts test",
     "eject-ui": "react-scripts eject",
-    "dev:ui": "react-scripts start",
+    "dev:ui": "next dev",
     "dev:backend": "next dev"
   },
   "dependencies": {
@@ -24,27 +24,24 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "ky": "^1.2.2",
-    "next": "^14.1.0",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "ky": "^1.2.2",
+    "next": "^14.1.0",
+    "next-themes": "^0.2.1",
     "nodemailer": "^6.7.5",
+    "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.2",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
@@ -52,7 +49,10 @@
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "web-vitals": "^2.1.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
