--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -37,8 +37,8 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.js",
-    ".next/types/**/*.ts"
+    "**/*.tsx",
+    ".next/types/**/*.ts",
   ],
   "exclude": ["node_modules"]
 }
