--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,8 +6,8 @@
     "target": "es2022",
     "allowJs": true,
     "resolveJsonModule": true,
-    "moduleDetection": "force",
     "isolatedModules": true,
+    "moduleResolution": "node16",
 
     /* Strictness */
     "strict": true,
