--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,8 +6,8 @@
     "target": "es2022",
     "allowJs": true,
     "resolveJsonModule": true,
-    "moduleDetection": "force",
     "isolatedModules": true,
+    "moduleResolution": "node16",
 
     /* Strictness */
     "strict": true,
@@ -37,8 +37,8 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.js",
-    ".next/types/**/*.ts"
+    "**/*.tsx",
+    ".next/types/**/*.ts",
   ],
   "exclude": ["node_modules"]
 }
